# currency_bot

./: Dockerfile  docker-compose.dev.yml  pyproject.toml
src/: config.py  main.py
src/bot/: __init__.py  api_adapters.py  errors.py  interfaces.py  poviders.py
src/bot/DTO/: CurrencyDTO.py  __init__.py
src/bot/greeting/: greeting_handler.py  greeting_router.py
